objects/QLI_History__c.object
<CustomObject>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QLI_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>QLI History</relationshipLabel>
        <relationshipName>QLI_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>QLI History</relationshipLabel>
        <relationshipName>QLI_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>QLI History</relationshipLabel>
        <relationshipName>QLI_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Action__c</fullName>
        <label>Record Action</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <label>SAP Material Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <label>QLI History</label>
    <nameField>
        <displayFormat>QH-{0000}</displayFormat>
        <label>QLI History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QLI History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>